WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75281
Misc fixes and cleanups in Functional.h
https://bugs.webkit.org/show_bug.cgi?id=75281
Summary
Misc fixes and cleanups in Functional.h
Anders Carlsson
Reported
2011-12-27 17:04:16 PST
Misc fixes and cleanups in Functional.h
Attachments
Patch
(16.17 KB, patch)
2011-12-27 17:07 PST
,
Anders Carlsson
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-12-27 17:07:01 PST
Created
attachment 120625
[details]
Patch
WebKit Review Bot
Comment 2
2011-12-27 17:09:34 PST
Attachment 120625
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/ChangeLog', u'Source..." exit_code: 1 Source/JavaScriptCore/wtf/Functional.h:286: Extra space before ( in function call [whitespace/parens] [4] Source/JavaScriptCore/wtf/Functional.h:303: Extra space before ( in function call [whitespace/parens] [4] Source/JavaScriptCore/wtf/Functional.h:329: Extra space before ( in function call [whitespace/parens] [4] Source/JavaScriptCore/wtf/Functional.h:356: Extra space before ( in function call [whitespace/parens] [4] Source/JavaScriptCore/wtf/Functional.h:385: Extra space before ( in function call [whitespace/parens] [4] Source/JavaScriptCore/wtf/Functional.h:416: Extra space before ( in function call [whitespace/parens] [4] Source/JavaScriptCore/wtf/Functional.h:522: Extra space before ( in function call [whitespace/parens] [4] Source/JavaScriptCore/wtf/Functional.h:528: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 8 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3
2011-12-27 17:31:35 PST
Committed
r103745
: <
http://trac.webkit.org/changeset/103745
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug