Misc fixes and cleanups in Functional.h https://bugs.webkit.org/show_bug.cgi?id=75281

Reviewed by Andreas Kling.

- Reformat template declarations so that the class begins on a new line.
- Change the parameter template parameters to start at P1 instead of P0.
- Add function wrappers and bind overloads for 4 and 5 parameter functions.
- Change the Function call operator to be const so const functions can be called.

* wtf/Functional.h:

Canonical link: https://commits.webkit.org/92047@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103745 268f45cc-cd09-0410-ab3c-d52691b4dbfc